--- a/AURORE_RH/src/main/resources/application.properties
+++ b/AURORE_RH/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 server.port=8080
 Spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
