--- a/AURORE_RH/src/main/resources/application.properties
+++ b/AURORE_RH/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/AURORERH?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/AURORERH?createDatabaseIfNotExist=true&serverTimezone=UTC
 #spring.datasource.url=jdbc:mysql://localhost:3315/aurorerh?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
