test sur les mails

--- a/reports/.settings/org.eclipse.core.resources.prefs
+++ b/reports/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//def/contrat\ test.jrxml=UTF-8
 encoding/contrat\ d'un\ employ\u00E9.jrxml=UTF-8
 encoding/liste\ des\ employ\u00E9s.jrxml=UTF-8
