--- a/AURORE_RH/src/main/resources/application.properties
+++ b/AURORE_RH/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 server.port=8080
 Spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=yann.dokoula@2025.ucac-icam.com
+spring.mail.password=13Zinzin,
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
